[package]
name = "taxjar"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["taxjar", "api"]
categories = ["web-programming", "api-bindings"]
description = "TaxJar API"
repository = "https://github.com/apibillme/taxjar"
readme = "README.md"

[dependencies]
